test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/invalid_var_in_if.plx
pub fn main(none) i32 {
    if 1 {
        return c
    }
    c: i32 = 0
}
